# Slant

./: .gitignore  CMakeLists.txt  README.md  library.h
include/Slant/: Common.h  Context.h  Slant.h
include/Slant++/: AudioBuffer.h  AudioDevice.h  AudioSource.h  Common.h  Context.h
include/Slant++/Stream/: AudioStream.h  Flac.h  Mp3.h  Vorbis.h  Wav.h
include/Slant++/Utils/: ADPCM.h
include/Slant/Stream/: AudioStream.h  Flac.h  Mp3.h  Vorbis.h  Wav.h
include/mixr/: mixr.h
include/mixr++/: Context.h
include/mixr++/Stream/: Flac.h  Mp3.h  Vorbis.h  Wav.h
src/: Common.c  Context.c
src/C/: Flac.cpp  Mp3.cpp  Stream.cpp  Vorbis.cpp  Wav.cpp
src/Impl/: Impl.cpp  Impl.h
src/Slant/: Flac.cpp  Mixr.cpp  Mp3.cpp  Stream.cpp  Vorbis.cpp  Wav.cpp
src/Slant++/: AudioBuffer.cpp  AudioDevice.cpp  AudioSource.cpp  Context.cpp
src/Slant++/Device/: AlsaDevice.cpp  AlsaDevice.h  SdlDevice.cpp  SdlDevice.h
src/Slant++/Stream/: Flac.cpp  Mp3.cpp  StringUtils.cpp  StringUtils.h  Vorbis.cpp  Wav.cpp
src/Slant++/Utils/: ADPCM.cpp
src/Stream/: Flac.cpp  Mp3.cpp  StringUtils.h  Vorbis.cpp  Wav.cpp
src/mixr/: Flac.cpp  Mixr.cpp  Mp3.cpp  Stream.cpp  Vorbis.cpp  Wav.cpp
src/mixr++/: AudioBuffer.cpp  AudioDevice.cpp  AudioSource.cpp  Context.cpp
src/mixr++/Device/: AlsaDevice.h
src/mixr++/Stream/: Flac.cpp  Mp3.cpp  StringUtils.cpp  Vorbis.cpp  Wav.cpp
src/mixr++/Utils/: ADPCM.cpp
tests/: CMakeLists.txt  CreateBuffers.c  CreateDestroyContext.c  SimpleAudio.c  main.cpp  test_mixr++.cpp  test_mixr.c  test_slant++.cpp  test_slant.c
tests/Utils/: Utils.c  Utils.h
